fix(main): remove overflow

--- a/packages/theme-chalk/src/main.scss
+++ b/packages/theme-chalk/src/main.scss
@@ -8,7 +8,7 @@
   display: block;
   flex: 1;
   flex-basis: auto;
-  overflow: auto;
+  // overflow: auto;
   box-sizing: border-box;
   padding: getCssVar('main-padding');
 }
